--- a/environment/notebooks/gcloud_data_interface.ipynb
+++ b/environment/notebooks/gcloud_data_interface.ipynb
@@ -9,15 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import os\n",
     "from pathlib import Path\n",
+    "from dotenv import load_dotenv\n",
+    "import shutil\n",
     "\n",
     "from collab_data.file_utils import expand_path, get_project_root\n",
     "from collab_data.gcs_utils import GCSClient"
@@ -32,21 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gerbils key: /workspace/api-keys/collab-gerbils-444419-2c6aa9a47bb5.json\n",
-      "Data key: /workspace/api-keys/collab-data-463313-c340ad86b28e.json\n"
+      "Gerbils key: /Users/tommybotch/Documents/api-keys/collab-gerbils-444419-2c6aa9a47bb5.json\n",
+      "Data key: /Users/tommybotch/Documents/api-keys/collab-data-463313-c340ad86b28e.json\n"
      ]
     }
    ],
    "source": [
-    "gerbils_key = os.environ.get('COLLAB_GERBILS_KEY')\n",
-    "data_key = os.environ.get('COLLAB_DATA_KEY')\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "gerbils_key = os.environ.get(\"COLLAB_GERBILS_KEY\")\n",
+    "data_key = os.environ.get(\"COLLAB_DATA_KEY\")\n",
     "\n",
     "print(f\"Gerbils key: {gerbils_key}\")\n",
     "print(f\"Data key: {data_key}\")"
@@ -61,28 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-06-25 17:39:13.464\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1mUsing credentials from /workspace/api-keys/collab-gerbils-444419-2c6aa9a47bb5.json\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-06-25 17:39:13.561\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m40\u001b[0m - \u001b[1mUsing project collab-gerbils-444419\u001b[0m\n"
+      "\u001b[32m2025-07-22 17:24:53.492\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1mUsing credentials from /Users/tommybotch/Documents/api-keys/collab-gerbils-444419-2c6aa9a47bb5.json\u001b[0m\n",
+      "\u001b[32m2025-07-22 17:24:53.497\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m40\u001b[0m - \u001b[1mUsing project collab-gerbils-444419\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "CURRENT_PROJECT = 'COLLAB_GERBILS'\n",
-    "PROJECT_KEY = Path(os.environ.get(f'{CURRENT_PROJECT}_KEY'))\n",
-    "PROJECT_ID ='-'.join(PROJECT_KEY.stem.split('-')[:-1])\n",
+    "CURRENT_PROJECT = \"COLLAB_GERBILS\"\n",
+    "PROJECT_KEY = Path(os.environ.get(f\"{CURRENT_PROJECT}_KEY\"))\n",
+    "PROJECT_ID = \"-\".join(PROJECT_KEY.stem.split(\"-\")[:-1])\n",
     "\n",
     "# Connect to GCS\n",
     "gcs_client = GCSClient(\n",
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,8 +121,7 @@
    ],
    "source": [
     "all_buckets = gcs_client.list_buckets()\n",
-    "print(f\"Available buckets: {all_buckets}\")\n",
-    "\n"
+    "print(f\"Available buckets: {all_buckets}\")"
    ]
   },
   {
@@ -126,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +141,7 @@
     "file_path = gcs_client.glob(f\"{all_buckets[-1]}/cohort2/*final*\")[0]\n",
     "\n",
     "# Create a local path for downloading\n",
-    "local_data_path = Path('/workspace/fieldwork-data/gerbils') / Path(file_path).name\n",
+    "local_data_path = Path(\"./data\") / Path(file_path).name\n",
     "\n",
     "# Download the file\n",
     "gcs_client.gcs.get_file(\n",
@@ -142,11 +149,27 @@
     "    lpath=local_data_path.as_posix(),\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove downloaded file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shutil.rmtree(\"./data\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "collab",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
