--- a/docs/data/gcloud_example_download.ipynb
+++ b/docs/data/gcloud_example_download.ipynb
@@ -4,34 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example of loading GCS data"
+    "# GCS Access"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from dotenv import load_dotenv\n",
-    "import shutil\n",
     "\n",
-    "from collab_data.file_utils import expand_path, get_project_root\n",
-    "from collab_data.gcs_utils import GCSClient"
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "from collab_env.data.file_utils import expand_path, get_project_root\n",
+    "from collab_env.data.gcs_utils import GCSClient\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 1: Downloading files"
    ]
   },
   {
@@ -42,25 +40,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, the project directory should contain an .env file containing the paths to the credential files for each gcs project. Your specific setup may vary."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gerbils key: /Users/tommybotch/Documents/api-keys/collab-gerbils-444419-2c6aa9a47bb5.json\n",
-      "Data key: /Users/tommybotch/Documents/api-keys/collab-data-463313-c340ad86b28e.json\n"
+      "Gerbils key: /Users/dima/git/collab-environment/config-local/collab-gerbils-444419-2c6aa9a47bb5.json\n",
+      "Data key: /Users/dima/git/collab-environment/config-local/collab-data-463313-c340ad86b28e.json\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
-    "gerbils_key = os.environ.get(\"COLLAB_GERBILS_KEY\")\n",
-    "data_key = os.environ.get(\"COLLAB_DATA_KEY\")\n",
+    "gerbils_key = expand_path(os.environ.get(\"COLLAB_GERBILS_KEY\", \"\"), get_project_root())\n",
+    "data_key = expand_path(os.environ.get(\"COLLAB_DATA_KEY\", \"\"), get_project_root())\n",
     "\n",
     "print(f\"Gerbils key: {gerbils_key}\")\n",
     "print(f\"Data key: {data_key}\")"
@@ -70,26 +76,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grab for gerbils data"
+    "### Connect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-07-22 17:24:53.492\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1mUsing credentials from /Users/tommybotch/Documents/api-keys/collab-gerbils-444419-2c6aa9a47bb5.json\u001b[0m\n",
-      "\u001b[32m2025-07-22 17:24:53.497\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m40\u001b[0m - \u001b[1mUsing project collab-gerbils-444419\u001b[0m\n"
+      "\u001b[32m2025-07-23 18:51:03.553\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_env.data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1mUsing credentials from /Users/dima/git/collab-environment/config-local/collab-gerbils-444419-2c6aa9a47bb5.json\u001b[0m\n",
+      "\u001b[32m2025-07-23 18:51:03.554\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_env.data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m40\u001b[0m - \u001b[1mUsing project collab-gerbils-444419\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "CURRENT_PROJECT = \"COLLAB_GERBILS\"\n",
-    "PROJECT_KEY = Path(os.environ.get(f\"{CURRENT_PROJECT}_KEY\"))\n",
+    "PROJECT_KEY = Path(os.environ.get(f\"{CURRENT_PROJECT}_KEY\"))  # type: ignore\n",
     "PROJECT_ID = \"-\".join(PROJECT_KEY.stem.split(\"-\")[:-1])\n",
     "\n",
     "# Connect to GCS\n",
@@ -103,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show current buckets"
+    "### Show current buckets"
    ]
   },
   {
@@ -128,12 +134,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grab a file from the videos bucket"
+    "### Grab a file from the videos bucket"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +147,7 @@
     "file_path = gcs_client.glob(f\"{all_buckets[-1]}/cohort2/*final*\")[0]\n",
     "\n",
     "# Create a local path for downloading\n",
-    "local_data_path = Path(\"./data\") / Path(file_path).name\n",
+    "local_data_path = expand_path(Path(\"./data\") / Path(file_path).name, get_project_root())\n",
     "\n",
     "# Download the file\n",
     "gcs_client.gcs.get_file(\n",
@@ -159,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.rmtree(\"./data\")"
+    "os.remove(local_data_path)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "collab",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
