--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "00d07572",
    "metadata": {},
    "outputs": [
@@ -33,20 +33,21 @@
     "import uuid\n",
     "from pathlib import Path\n",
     "from typing import List, Optional, Dict, Tuple\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Import Custom Scripts\n",
+    "from collab_env.tracking.thermal_processing import process_directory, validate_session_structure\n",
+    "from collab_env.tracking.align_videos_manually import align_videos, step1_crop_and_prepare, step2_spatial_alignment, save_warped_video\n",
+    "from collab_env.tracking.local_model_tracking import run_tracking, overlay_tracks_on_video, visualize_detections_from_video\n",
+    "import subprocess\n",
+    "\n",
+    "from collab_env.data.file_utils import expand_path, get_project_root\n",
+    "from collab_env.data.gcs_utils import GCSClient\n",
+    "\n",
     "\n",
     "# Reload helper for dev work\n",
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "\n",
-    "# Import Custom Scripts\n",
-    "from scripts.thermal_processing import process_directory, validate_session_structure\n",
-    "from scripts.align_videos_manually import align_videos, step1_crop_and_prepare, step2_spatial_alignment, save_warped_video\n",
-    "from scripts.local_model_tracking import run_tracking, overlay_tracks_on_video, visualize_detections_from_video\n",
-    "import subprocess\n",
-    "\n",
-    "# from Desktop.labeling_data.data_structure.Dima_collab.collab_data.file_utils import expand_path, get_project_root\n",
-    "# from Desktop.labeling_data.data_structure.Dima_collab.collab_data.gcs_utils import GCSClient"
+    "%autoreload 2\n"
    ]
   },
   {
@@ -54,51 +55,186 @@
    "execution_count": null,
    "id": "888d4395",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-07-25 14:20:00.120\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_env.data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m34\u001b[0m - \u001b[1mUsing credentials from /Users/dima/git/collab-environment/config-local/collab-data-463313-c340ad86b28e.json\u001b[0m\n",
+      "\u001b[32m2025-07-25 14:20:00.122\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_env.data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m40\u001b[0m - \u001b[1mUsing project collab-data-463313\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup Configuration\n",
-    "\n",
-    "#doing it with full path because I'm too lazy for actual directory management \n",
-    "CREDENTIALS_PATH = \"/Users/inesaitsahalia/Desktop/labeling_data/data_structure/Dima_collab/collab_data/api-keys/collab-data-463313-c340ad86b28e.json\"\n",
+    "load_dotenv()\n",
+    "data_key = expand_path(os.environ.get(\"COLLAB_DATA_KEY\", \"\"), get_project_root())\n",
     "PROJECT_ID = \"collab-data-463313\"\n",
-    "BUCKET_NAME = \"fieldwork_data\"  # Update with your bucket name\n",
-    "LOCAL_DOWNLOAD_DIR = Path(\"/path/to/local/download\")  # Update with your local download directory\n",
-    "LOCAL_PROCESSED_DIR = Path(\"/path/to/local/processed\")  # Update with your local processed directory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94fb308b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "CREDENTIALS_PATH = expand_path(data_key.as_posix(), get_project_root())\n",
+    "\n",
     "# Connect to Google Cloud Storage\n",
     "gcs_client = GCSClient(\n",
     "    project_id=PROJECT_ID,\n",
     "    credentials_path=CREDENTIALS_PATH,\n",
-    "    )\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "94fb308b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available buckets: ['fieldwork_curated', 'fieldwork_processed']\n"
+     ]
+    }
+   ],
+   "source": [
     "# Verify connection\n",
     "print(\"Available buckets:\", gcs_client.list_buckets())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "827a25b9",
+   "execution_count": 8,
+   "id": "d3b948f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fieldwork_processed/2024_02_06-session_0001',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001',\n",
+       " 'fieldwork_processed/2024_05_18-session_0002',\n",
+       " 'fieldwork_processed/2024_05_18-session_0003',\n",
+       " 'fieldwork_processed/2024_05_18-session_0004']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BUCKET_NAME = \"fieldwork_processed\"  # Update with your bucket name\n",
+    "\n",
+    "gcs_client.glob(f'{BUCKET_NAME}/*')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0891ac05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fieldwork_processed/2024_05_18-session_0001/metadata_518_1.yaml',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/rgb_1',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/rgb_1/time_cropped-GX010150.MP4',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/rgb_2',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/rgb_2/time_cropped-GX010150.MP4',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/thermal_1',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/thermal_1/thermal_1_tracks.csv',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/thermal_1/thermal_1_tracks.mp4',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/thermal_1/time_cropped-thermal_8.0_19.0.csv',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/thermal_2',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/thermal_2/thermal_2_tracks.csv',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/thermal_2/thermal_2_tracks.mp4',\n",
+       " 'fieldwork_processed/2024_05_18-session_0001/thermal_2/time_cropped-thermal_10.0_20.0.csv']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Download Data from Cloud Bucket\n",
-    "CLOUD_PREFIX = \"your-cloud-prefix\"  # Update with your cloud prefix\n",
-    "LOCAL_DOWNLOAD_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "SESSION_FOLDER = \"2024_05_18-session_0001\"\n",
+    "CLOUD_PREFIX = f\"{BUCKET_NAME}/{SESSION_FOLDER}\"  # Update with data folder (session)\n",
+    "gcs_client.glob(f\"{CLOUD_PREFIX}/**\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9ca1927a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local_name: metadata_518_1.yaml, suffix: .yaml\n",
+      "Downloading file: fieldwork_processed/2024_05_18-session_0001/metadata_518_1.yaml to /Users/dima/git/collab-environment/data/2024_05_18-session_0001/metadata_518_1.yaml\n",
+      "local_name: rgb_1, suffix: \n",
+      "Creating folder: /Users/dima/git/collab-environment/data/2024_05_18-session_0001/rgb_1\n",
+      "local_name: time_cropped-GX010150.MP4, suffix: .MP4\n",
+      "Downloading file: fieldwork_processed/2024_05_18-session_0001/rgb_1/time_cropped-GX010150.MP4 to /Users/dima/git/collab-environment/data/2024_05_18-session_0001/rgb_1/time_cropped-GX010150.MP4\n",
+      "local_name: rgb_2, suffix: \n",
+      "Creating folder: /Users/dima/git/collab-environment/data/2024_05_18-session_0001/rgb_2\n",
+      "local_name: time_cropped-GX010150.MP4, suffix: .MP4\n",
+      "Downloading file: fieldwork_processed/2024_05_18-session_0001/rgb_2/time_cropped-GX010150.MP4 to /Users/dima/git/collab-environment/data/2024_05_18-session_0001/rgb_2/time_cropped-GX010150.MP4\n",
+      "local_name: thermal_1, suffix: \n",
+      "Creating folder: /Users/dima/git/collab-environment/data/2024_05_18-session_0001/thermal_1\n",
+      "local_name: thermal_1_tracks.csv, suffix: .csv\n",
+      "Downloading file: fieldwork_processed/2024_05_18-session_0001/thermal_1/thermal_1_tracks.csv to /Users/dima/git/collab-environment/data/2024_05_18-session_0001/thermal_1/thermal_1_tracks.csv\n",
+      "local_name: thermal_1_tracks.mp4, suffix: .mp4\n",
+      "Downloading file: fieldwork_processed/2024_05_18-session_0001/thermal_1/thermal_1_tracks.mp4 to /Users/dima/git/collab-environment/data/2024_05_18-session_0001/thermal_1/thermal_1_tracks.mp4\n",
+      "local_name: time_cropped-thermal_8.0_19.0.csv, suffix: .csv\n",
+      "Downloading file: fieldwork_processed/2024_05_18-session_0001/thermal_1/time_cropped-thermal_8.0_19.0.csv to /Users/dima/git/collab-environment/data/2024_05_18-session_0001/thermal_1/time_cropped-thermal_8.0_19.0.csv\n",
+      "local_name: thermal_2, suffix: \n",
+      "Creating folder: /Users/dima/git/collab-environment/data/2024_05_18-session_0001/thermal_2\n",
+      "local_name: thermal_2_tracks.csv, suffix: .csv\n",
+      "Downloading file: fieldwork_processed/2024_05_18-session_0001/thermal_2/thermal_2_tracks.csv to /Users/dima/git/collab-environment/data/2024_05_18-session_0001/thermal_2/thermal_2_tracks.csv\n",
+      "local_name: thermal_2_tracks.mp4, suffix: .mp4\n",
+      "Downloading file: fieldwork_processed/2024_05_18-session_0001/thermal_2/thermal_2_tracks.mp4 to /Users/dima/git/collab-environment/data/2024_05_18-session_0001/thermal_2/thermal_2_tracks.mp4\n",
+      "local_name: time_cropped-thermal_10.0_20.0.csv, suffix: .csv\n",
+      "Downloading file: fieldwork_processed/2024_05_18-session_0001/thermal_2/time_cropped-thermal_10.0_20.0.csv to /Users/dima/git/collab-environment/data/2024_05_18-session_0001/thermal_2/time_cropped-thermal_10.0_20.0.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "LOCAL_DOWNLOAD_DIR = expand_path(f\"data/{SESSION_FOLDER}\",get_project_root())\n",
+    "LOCAL_PROCESSED_DIR = expand_path(f\"data/{SESSION_FOLDER}\",get_project_root())\n",
     "\n",
-    "for blob in gcs_client.glob(f\"{BUCKET_NAME}/{CLOUD_PREFIX}/**\"):\n",
-    "    local_path = LOCAL_DOWNLOAD_DIR / Path(blob).name\n",
-    "    gcs_client.download_file(blob, str(local_path))\n",
+    "if not LOCAL_DOWNLOAD_DIR.exists():\n",
+    "    LOCAL_DOWNLOAD_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "if not LOCAL_PROCESSED_DIR.exists():\n",
+    "    LOCAL_PROCESSED_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "print(\"Downloaded files:\", list(LOCAL_DOWNLOAD_DIR.iterdir()))"
+    "for blob in gcs_client.glob(f\"{CLOUD_PREFIX}/**\"):\n",
+    "    relative_path = Path(blob).relative_to(f\"{CLOUD_PREFIX}\")\n",
+    "    local_name = relative_path.name\n",
+    "    suffix = relative_path.suffix\n",
+    "    print(f\"local_name: {local_name}, suffix: {suffix}\")\n",
+    "    if len(str(suffix))>0:\n",
+    "        #print(\"File!\")\n",
+    "        parent_folder = relative_path.parent\n",
+    "        if not Path(LOCAL_DOWNLOAD_DIR / parent_folder).exists():\n",
+    "            print(f\"Creating folder: {LOCAL_DOWNLOAD_DIR / parent_folder}\")\n",
+    "            Path(LOCAL_DOWNLOAD_DIR / parent_folder).mkdir(parents=True, exist_ok=True)\n",
+    "        # print(f\"parent_folder: {parent_folder}\")\n",
+    "        local_path = LOCAL_DOWNLOAD_DIR / parent_folder / local_name\n",
+    "        print(f\"Downloading file: {blob} to {local_path}\")\n",
+    "        gcs_client.gcs.get_file(blob, str(local_path))\n",
+    "    else:\n",
+    "        \n",
+    "        if not Path(LOCAL_PROCESSED_DIR / relative_path).exists():\n",
+    "            print(f\"Creating folder: {LOCAL_PROCESSED_DIR / relative_path}\")\n",
+    "            Path(LOCAL_PROCESSED_DIR / relative_path).mkdir(parents=True, exist_ok=True)\n",
+    "    # check if there is an extension, if not this is a folder and we need to create it\n",
+    "    \n",
+    "\n",
+    "#print(\"Downloaded files:\", list(LOCAL_DOWNLOAD_DIR.iterdir()))\n",
+    "\n"
    ]
   },
   {
@@ -267,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "yolo",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
