--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -27,9 +27,17 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "# Import Custom Scripts\n",
-    "from collab_env.tracking.thermal_processing import process_directory, validate_session_structure\n",
+    "from collab_env.tracking.thermal_processing import (\n",
+    "    process_directory,\n",
+    "    validate_session_structure,\n",
+    ")\n",
     "from collab_env.tracking.align_videos_manually import align_videos\n",
-    "from collab_env.tracking.model.local_model_tracking import run_tracking, overlay_tracks_on_video, visualize_detections_from_video\n",
+    "from collab_env.tracking.model.local_model_tracking import (\n",
+    "    run_tracking,\n",
+    "    overlay_tracks_on_video,\n",
+    "    visualize_detections_from_video,\n",
+    ")\n",
+    "\n",
     "# Import Utility Functions\n",
     "from collab_env.data.file_utils import expand_path, get_project_root\n",
     "from collab_env.data.gcs_utils import GCSClient\n",
@@ -82,7 +90,7 @@
    "outputs": [],
    "source": [
     "BUCKET_NAME = \"fieldwork_curated\"  # Update with your bucket name\n",
-    "gcs_client.glob(f'{BUCKET_NAME}/*')"
+    "gcs_client.glob(f\"{BUCKET_NAME}/*\")"
    ]
   },
   {
@@ -105,8 +113,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_DOWNLOAD_DIR = expand_path(f\"data/raw/{SESSION_FOLDER}\",get_project_root())\n",
-    "LOCAL_PROCESSED_DIR = expand_path(f\"data/processed/{SESSION_FOLDER}\",get_project_root())"
+    "LOCAL_DOWNLOAD_DIR = expand_path(f\"data/raw/{SESSION_FOLDER}\", get_project_root())\n",
+    "LOCAL_PROCESSED_DIR = expand_path(\n",
+    "    f\"data/processed/{SESSION_FOLDER}\", get_project_root()\n",
+    ")"
    ]
   },
   {
@@ -127,24 +137,28 @@
     "        local_name = relative_path.name\n",
     "        suffix = relative_path.suffix\n",
     "        print(f\"local_name: {local_name}, suffix: {suffix}\")\n",
-    "        if len(str(suffix))>0:\n",
-    "            #print(\"File!\")\n",
+    "        if len(str(suffix)) > 0:\n",
+    "            # print(\"File!\")\n",
     "            parent_folder = relative_path.parent\n",
     "            if not Path(LOCAL_DOWNLOAD_DIR / parent_folder).exists():\n",
     "                print(f\"Creating folder: {LOCAL_DOWNLOAD_DIR / parent_folder}\")\n",
-    "                Path(LOCAL_DOWNLOAD_DIR / parent_folder).mkdir(parents=True, exist_ok=True)\n",
+    "                Path(LOCAL_DOWNLOAD_DIR / parent_folder).mkdir(\n",
+    "                    parents=True, exist_ok=True\n",
+    "                )\n",
     "            # print(f\"parent_folder: {parent_folder}\")\n",
     "            local_path = LOCAL_DOWNLOAD_DIR / parent_folder / local_name\n",
     "            print(f\"Downloading file: {blob} to {local_path}\")\n",
     "            gcs_client.gcs.get_file(blob, str(local_path))\n",
     "        else:\n",
-    "            \n",
+    "\n",
     "            if not Path(LOCAL_PROCESSED_DIR / relative_path).exists():\n",
     "                print(f\"Creating folder: {LOCAL_PROCESSED_DIR / relative_path}\")\n",
-    "                Path(LOCAL_PROCESSED_DIR / relative_path).mkdir(parents=True, exist_ok=True)\n",
+    "                Path(LOCAL_PROCESSED_DIR / relative_path).mkdir(\n",
+    "                    parents=True, exist_ok=True\n",
+    "                )\n",
     "        # check if there is an extension, if not this is a folder and we need to create it\n",
-    "        \n",
-    "    #print(\"Downloaded files:\", list(LOCAL_DOWNLOAD_DIR.iterdir()))"
+    "\n",
+    "    # print(\"Downloaded files:\", list(LOCAL_DOWNLOAD_DIR.iterdir()))"
    ]
   },
   {
@@ -178,12 +192,19 @@
    "outputs": [],
    "source": [
     "if not skip_thermal_extraction:\n",
-    "    #thermal files processing\n",
+    "    # thermal files processing\n",
     "    print(\"Processing thermal files...\")\n",
     "\n",
     "    # call with preview=False to choose the vmin/vmax automatically, otherwise the user will be asked to choose the vmin/vmax\n",
     "    # process_directory(folder_path=LOCAL_DOWNLOAD_DIR, out_path=LOCAL_DOWNLOAD_DIR, color='magma', preview=True, max_frames=None, fps=30)\n",
-    "    process_directory(folder_path=LOCAL_DOWNLOAD_DIR, out_path=LOCAL_PROCESSED_DIR, color='magma', preview=True, max_frames=100, fps=30)"
+    "    process_directory(\n",
+    "        folder_path=LOCAL_DOWNLOAD_DIR,\n",
+    "        out_path=LOCAL_PROCESSED_DIR,\n",
+    "        color=\"magma\",\n",
+    "        preview=True,\n",
+    "        max_frames=100,\n",
+    "        fps=30,\n",
+    "    )"
    ]
   },
   {
@@ -270,17 +291,29 @@
     "print(\"Running detection and tracking...\")\n",
     "for camera in camera_numbers:\n",
     "    print(f\"Running detection and tracking on: thermal_{camera}\")\n",
-    "    \n",
+    "\n",
     "    # Define paths for the thermal video and model inference\n",
-    "    thermal_video_path = LOCAL_PROCESSED_DIR / \"aligned\" / f\"thermal_{camera}\" / f\"warped_thermal_{camera}.mp4\"\n",
+    "    thermal_video_path = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned\"\n",
+    "        / f\"thermal_{camera}\"\n",
+    "        / f\"warped_thermal_{camera}.mp4\"\n",
+    "    )\n",
     "    if not thermal_video_path.exists():\n",
     "        print(f\"Thermal video not found for camera {camera}. Skipping...\")\n",
     "        continue\n",
     "\n",
     "    # Run local_model_inference script\n",
     "    try:\n",
-    "        output_csv_path = LOCAL_PROCESSED_DIR / \"aligned\" / f\"thermal_{camera}\" / \"output_results.csv\"\n",
-    "        output_video_path = LOCAL_PROCESSED_DIR / \"aligned\" / f\"thermal_{camera}\" / \"annotated_warped_thermal.mp4\"\n",
+    "        output_csv_path = (\n",
+    "            LOCAL_PROCESSED_DIR / \"aligned\" / f\"thermal_{camera}\" / \"output_results.csv\"\n",
+    "        )\n",
+    "        output_video_path = (\n",
+    "            LOCAL_PROCESSED_DIR\n",
+    "            / \"aligned\"\n",
+    "            / f\"thermal_{camera}\"\n",
+    "            / \"annotated_warped_thermal.mp4\"\n",
+    "        )\n",
     "        checkpoint_path = \"scripts/model/weights.pt\"\n",
     "\n",
     "        process_video_with_rfdetr(\n",
@@ -288,7 +321,7 @@
     "            output_csv_path=output_csv_path,\n",
     "            output_video_path=output_video_path,\n",
     "            checkpoint_path=checkpoint_path,\n",
-    "            confidence=0.5\n",
+    "            confidence=0.5,\n",
     "        )\n",
     "    except Exception as e:\n",
     "        print(f\"Error during object detection for camera {camera}: {e}\")\n",
@@ -298,7 +331,12 @@
     "    print(f\"Running tracking on: thermal_{camera}\")\n",
     "    run_tracking(LOCAL_PROCESSED_DIR, \"thermal\", camera)\n",
     "\n",
-    "    tracked_csv = LOCAL_PROCESSED_DIR / \"aligned\" / f\"thermal_{camera}\" / f\"thermal_{camera}_tracks.csv\"\n",
+    "    tracked_csv = (\n",
+    "        LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned\"\n",
+    "        / f\"thermal_{camera}\"\n",
+    "        / f\"thermal_{camera}_tracks.csv\"\n",
+    "    )\n",
     "    if not tracked_csv.exists():\n",
     "        print(f\"Tracking CSV not found for camera {camera}. Skipping visualization.\")\n",
     "        continue\n",
@@ -307,14 +345,23 @@
     "    visualize_detections_from_video(\n",
     "        csv_path=tracked_csv,\n",
     "        video_path=thermal_video_path,\n",
-    "        output_video_path=LOCAL_PROCESSED_DIR / \"aligned\" / f\"thermal_{camera}\" / f\"visualized_thermal_{camera}.mp4\"\n",
+    "        output_video_path=LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned\"\n",
+    "        / f\"thermal_{camera}\"\n",
+    "        / f\"visualized_thermal_{camera}.mp4\",\n",
     "    )\n",
     "    print(f\"Visualizing tracks for rgb camera {camera}...\")\n",
     "    overlay_tracks_on_video(\n",
     "        csv_path=tracked_csv,\n",
-    "        frame_dir=LOCAL_PROCESSED_DIR / \"aligned\" / f\"rgb_{camera}\" / \"annotated_frames\",\n",
-    "        output_video=LOCAL_PROCESSED_DIR / \"aligned\" / f\"rgb_{camera}\" / f\"overlayed_tracks_{camera}.mp4\"\n",
-    "    )\n"
+    "        frame_dir=LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / \"annotated_frames\",\n",
+    "        output_video=LOCAL_PROCESSED_DIR\n",
+    "        / \"aligned\"\n",
+    "        / f\"rgb_{camera}\"\n",
+    "        / f\"overlayed_tracks_{camera}.mp4\",\n",
+    "    )"
    ]
   },
   {
@@ -325,7 +372,9 @@
    "outputs": [],
    "source": [
     "# Upload Processed Data to Cloud Bucket\n",
-    "CLOUD_PROCESSED_PREFIX = \"your-cloud-processed-prefix\"  # Update with your processed data prefix\n",
+    "CLOUD_PROCESSED_PREFIX = (\n",
+    "    \"your-cloud-processed-prefix\"  # Update with your processed data prefix\n",
+    ")\n",
     "for file in LOCAL_PROCESSED_DIR.iterdir():\n",
     "    cloud_path = f\"{BUCKET_NAME}/{CLOUD_PROCESSED_PREFIX}/{file.name}\"\n",
     "    gcs_client.upload_file(str(file), cloud_path)\n",
