--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -44,7 +44,7 @@
     "from collab_env.data.gcs_utils import GCSClient\n",
     "\n",
     "# Import Custom Scripts\n",
-    "from collab_env.tracking.align_videos_manually import align_videos\n",
+    "from collab_env.tracking.alignment_gui import align_videos\n",
     "from collab_env.tracking.model.local_model_inference import process_video_with_rfdetr\n",
     "from collab_env.tracking.model.local_model_tracking import (\n",
     "    overlay_tracks_on_video,\n",
