adding comments to notebook

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -17,19 +17,7 @@
    "execution_count": null,
    "id": "00d07572",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'collab_env'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Import Utility Functions\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcollab_env\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfile_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m expand_path, get_project_root\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcollab_env\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgcs_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GCSClient\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Import Custom Scripts\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'collab_env'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -54,14 +42,34 @@
     "from collab_env.tracking.thermal_processing import (\n",
     "    process_directory,\n",
     "    validate_session_structure,\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3372587",
+   "metadata": {},
+   "source": [
+    "### Set flags for data processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85cb2529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "skip_download = True\n",
-    "skip_thermal_extraction = True\n",
-    "\n",
-    "# Reload helper for dev work\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "skip_thermal_extraction = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de6a0313",
+   "metadata": {},
+   "source": [
+    "### Setup gcloud"
    ]
   },
   {
@@ -86,6 +94,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55fa907d",
+   "metadata": {},
+   "source": [
+    "Check available buckets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "94fb308b",
@@ -94,6 +110,14 @@
    "source": [
     "# Verify connection\n",
     "print(\"Available buckets:\", gcs_client.list_buckets())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b502558",
+   "metadata": {},
+   "source": [
+    "Show files within buckets"
    ]
   },
   {
@@ -108,6 +132,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2e83e50",
+   "metadata": {},
+   "source": [
+    "Select a session to download and process"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0891ac05",
@@ -117,20 +149,20 @@
     "# Download Data from Cloud Bucket\n",
     "SESSION_FOLDER = \"2024_02_06-session_0001\"\n",
     "CLOUD_PREFIX = f\"{BUCKET_NAME}/{SESSION_FOLDER}\"  # Update with data folder (session)\n",
-    "gcs_client.glob(f\"{CLOUD_PREFIX}/**\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa4e7573",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gcs_client.glob(f\"{CLOUD_PREFIX}/**\")\n",
+    "\n",
     "LOCAL_DOWNLOAD_DIR = expand_path(f\"data/raw/{SESSION_FOLDER}\", get_project_root())\n",
     "LOCAL_PROCESSED_DIR = expand_path(\n",
     "    f\"data/processed/{SESSION_FOLDER}\", get_project_root()\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa4e7573",
+   "metadata": {},
+   "source": [
+    "Download from gcloud"
    ]
   },
   {
@@ -176,6 +208,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80d99a0c",
+   "metadata": {},
+   "source": [
+    "Ensure everything worked properly"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e2e8dcd9",
@@ -186,6 +226,14 @@
     "print(\"Validating session structure...\")\n",
     "issues = validate_session_structure(LOCAL_DOWNLOAD_DIR)\n",
     "print(f\"Issues found: {issues if len(issues)>0 else 'None'}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "260efce3",
+   "metadata": {},
+   "source": [
+    "### Extract thermal video info"
    ]
   },
   {
@@ -209,6 +257,14 @@
     "        max_frames=100,\n",
     "        fps=30,\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "472a91c5",
+   "metadata": {},
+   "source": [
+    "#### Spatiotemporal alignment of thermal and RGB "
    ]
   },
   {
@@ -280,6 +336,14 @@
     "        skip_homography=skip_homography,\n",
     "        skip_translation=skip_translation,\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0233241c",
+   "metadata": {},
+   "source": [
+    "#### Object detection and alignment"
    ]
   },
   {
@@ -364,6 +428,14 @@
     "        / f\"rgb_{camera}\"\n",
     "        / f\"overlayed_tracks_{camera}.mp4\",\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68872063",
+   "metadata": {},
+   "source": [
+    "### Push processed files"
    ]
   },
   {
