added readme for processing and alignment gui

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -225,7 +225,7 @@
     "warp_to = \"rgb\"  # Default warp to rgb, thermal is changing, not rgb\n",
     "rotation_angle = 0.0  # Default rotation angle\n",
     "skip_homography = False  # Default to not skip homography\n",
-    "skip_translation = True  # Default to skip translation\n",
+    "skip_translation = False  # Default to not skip translation\n",
     "camera_numbers = [1, 2]\n",
     "\n",
     "for camera in camera_numbers:\n",
