format lint notebooks

--- a/docs/gnn/1-TrainBasicGNN.ipynb
+++ b/docs/gnn/1-TrainBasicGNN.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1451bcb6",
    "metadata": {
     "scrolled": true
@@ -32,25 +32,25 @@
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
+    "from typing import Any\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn.functional as functional\n",
     "from torch.utils.data import random_split\n",
-    "from torch_geometric.data import Batch, Data, DataLoader\n",
+    "from torch_geometric.data import DataLoader\n",
     "\n",
     "from collab_env.data.file_utils import expand_path, get_project_root"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4cad07db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collab_env.sim.boids_gnn_temp.animal_simulation import visualize_graph, visualize_pair\n",
     "from collab_env.gnn.gnn import get_adjcency_from_debug, plot_log_loss, train_rules_gnn\n",
     "from collab_env.gnn.gnn_definition import GNN, Lazy"
    ]
@@ -75,7 +75,9 @@
     "    weights_only=False,\n",
     ")\n",
     "species_configs = torch.load(\n",
-    "    expand_path(\"simulated_data/boid_single_species_short_config.pt\", get_project_root()),\n",
+    "    expand_path(\n",
+    "        \"simulated_data/boid_single_species_short_config.pt\", get_project_root()\n",
+    "    ),\n",
     "    weights_only=False,\n",
     ")"
    ]
@@ -150,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5cdd30cf-a9ad-4244-9a92-492fd2346d7e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify various model configurations\n",
-    "models = {}\n",
+    "models: dict[str, dict[str, Any]] = {}\n",
     "\n",
     "models[\"vpluspplus_a\"] = {}\n",
     "models[\"vpluspplus_a\"][\n",
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4aeafe19",
    "metadata": {
     "scrolled": true
@@ -552,7 +554,7 @@
     "        models[m][\"start_frame\"],\n",
     "        models[m][\"lr\"],\n",
     "    )\n",
-    "\n",
+    "    gnn_model: torch.nn.Module | None = None\n",
     "    # initialize models\n",
     "    if m == \"lazy\":\n",
     "        training = False\n",
@@ -623,8 +625,10 @@
     "# save model\n",
     "for m in [\"vpluspplus_a\", \"lazy\"]:\n",
     "    gnn_model = models[m][\"model\"]\n",
-    "    model_output = expand_path(f\"trained_models/boid_single_species_short_{gnn_model.name}_position.pt\",\n",
-    "                               get_project_root())\n",
+    "    model_output = expand_path(\n",
+    "        f\"trained_models/boid_single_species_short_{gnn_model.name}_position.pt\",\n",
+    "        get_project_root(),\n",
+    "    )\n",
     "    torch.save(gnn_model.state_dict(), model_output)\n",
     "    print(f\"Saved model {m} to {model_output}.\")"
    ]
@@ -766,7 +770,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "file_id = 2\n",
     "m = \"lazy\"\n",
     "epoch_num = 0\n",
@@ -841,19 +844,19 @@
     "ax[2].plot(actual_acc[:, b, 0], \"+\", label=\"actual_acc\")\n",
     "ax[2].plot(predicted_acc_lazy[:, b, 0], \"+\", label=\"predicted acc lazy\")\n",
     "ax[2].plot(predicted_acc_gnn[:, b, 0], \"+\", label=\"predicted acc gnn\")\n",
-    "#ax[2].plot(loss_acc, label=\"acc loss\")\n",
+    "# ax[2].plot(loss_acc, label=\"acc loss\")\n",
     "ax[2].set_xlabel(\"frame\")\n",
     "ax[2].set_ylabel(\"acc x\")\n",
     "\n",
     "ax[3].plot(actual_acc[:, b, 1], \"+\", label=\"actual_acc\")\n",
     "ax[3].plot(predicted_acc_lazy[:, b, 1], \"+\", label=\"predicted acc lazy\")\n",
     "ax[3].plot(predicted_acc_gnn[:, b, 1], \"+\", label=\"predicted acc gnn\")\n",
-    "#ax[3].plot(loss_acc, label=\"acc loss\")\n",
+    "# ax[3].plot(loss_acc, label=\"acc loss\")\n",
     "ax[3].set_xlabel(\"frame\")\n",
     "ax[3].set_ylabel(\"acc y\")\n",
     "\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
