--- a/docs/gnn/0-Simulate_Boid.ipynb
+++ b/docs/gnn/0-Simulate_Boid.ipynb
@@ -34,13 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ad5b9e98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch_geometric.data import Data, Batch, DataLoader\n",
-    "import torch"
+    "import torch\n",
+    "from torch_geometric.data import DataLoader"
    ]
   },
   {
@@ -50,14 +50,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# our code\n",
-    "from collab_env.sim.boids_gnn_temp.animal_simulation import AnimalTrajectoryDataset, visualize_graph\n",
-    "from collab_env.sim.boids_gnn_temp.boid import update_boids, init_multi_species_boids\n",
+    "import os\n",
     "\n",
     "from collab_env.data.file_utils import expand_path, get_project_root\n",
+    "\n",
+    "# our code\n",
+    "from collab_env.sim.boids_gnn_temp.animal_simulation import (\n",
+    "    AnimalTrajectoryDataset,\n",
+    "    visualize_graph,\n",
+    ")\n",
+    "from collab_env.sim.boids_gnn_temp.boid import init_multi_species_boids, update_boids\n",
+    "\n",
     "# %%\n",
     "\n",
-    "import os\n",
     "\n",
     "smoke_test = \"CI\" in os.environ\n",
     "\n",
@@ -72,27 +77,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species_configs = { # different spieces should have a different set of values for all the parameters\n",
-    "                    # but the parameter name should all be the same for one updating algorithms.\n",
-    "                    \n",
-    "    \"A\": {\"visual_range\":50, \"centering_factor\":0.005,\n",
-    "          \"min_distance\":15, \"avoid_factor\":0.05,\n",
-    "          \"matching_factor\":0.5,\n",
-    "          \"margin\":5, #0.05, 25\n",
-    "          \"turn_factor\":10,\n",
-    "          \"speed_limit\":20,\n",
-    "          \"counts\": 20}\n",
+    "species_configs = {  # different spieces should have a different set of values for all the parameters\n",
+    "    # but the parameter name should all be the same for one updating algorithms.\n",
+    "    \"A\": {\n",
+    "        \"visual_range\": 50,\n",
+    "        \"centering_factor\": 0.005,\n",
+    "        \"min_distance\": 15,\n",
+    "        \"avoid_factor\": 0.05,\n",
+    "        \"matching_factor\": 0.5,\n",
+    "        \"margin\": 5,  # 0.05, 25\n",
+    "        \"turn_factor\": 10,\n",
+    "        \"speed_limit\": 20,\n",
+    "        \"counts\": 20,\n",
+    "    }\n",
     "}\n",
     "\n",
-    "dataset = AnimalTrajectoryDataset(init_multi_species_boids, update_boids,\n",
-    "                              species_configs,\n",
-    "                              width=640, height=480,\n",
-    "                              steps=steps, num_samples=50,\n",
-    "                              seed = 2025\n",
-    "                              )\n",
+    "dataset = AnimalTrajectoryDataset(\n",
+    "    init_multi_species_boids,\n",
+    "    update_boids,\n",
+    "    species_configs,\n",
+    "    width=640,\n",
+    "    height=480,\n",
+    "    steps=steps,\n",
+    "    num_samples=50,\n",
+    "    seed=2025,\n",
+    ")\n",
     "\n",
-    "torch.save(dataset, expand_path('simulated_data/boid_single_species_basic.pt', get_project_root()))\n",
-    "torch.save(species_configs, expand_path('simulated_data/boid_single_species_basic_config.pt', get_project_root()))"
+    "torch.save(\n",
+    "    dataset,\n",
+    "    expand_path(\"simulated_data/boid_single_species_basic.pt\", get_project_root()),\n",
+    ")\n",
+    "torch.save(\n",
+    "    species_configs,\n",
+    "    expand_path(\n",
+    "        \"simulated_data/boid_single_species_basic_config.pt\", get_project_root()\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -110,27 +130,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species_configs = { # different spieces should have a different set of values for all the parameters\n",
-    "                    # but the parameter name should all be the same for one updating algorithms.\n",
-    "                    \n",
-    "    \"A\": {\"visual_range\":50, \"centering_factor\":0.005,\n",
-    "          \"min_distance\":15, \"avoid_factor\":0.05,\n",
-    "          \"matching_factor\":0.5,\n",
-    "          \"margin\":5, #0.05, 25\n",
-    "          \"turn_factor\":10,\n",
-    "          \"speed_limit\":20,\n",
-    "          \"counts\": 20}\n",
+    "species_configs = {  # different spieces should have a different set of values for all the parameters\n",
+    "    # but the parameter name should all be the same for one updating algorithms.\n",
+    "    \"A\": {\n",
+    "        \"visual_range\": 50,\n",
+    "        \"centering_factor\": 0.005,\n",
+    "        \"min_distance\": 15,\n",
+    "        \"avoid_factor\": 0.05,\n",
+    "        \"matching_factor\": 0.5,\n",
+    "        \"margin\": 5,  # 0.05, 25\n",
+    "        \"turn_factor\": 10,\n",
+    "        \"speed_limit\": 20,\n",
+    "        \"counts\": 20,\n",
+    "    }\n",
     "}\n",
     "\n",
-    "dataset = AnimalTrajectoryDataset(init_multi_species_boids, update_boids,\n",
-    "                              species_configs,\n",
-    "                              width=640, height=480,\n",
-    "                              steps=10, num_samples=50,\n",
-    "                              seed = 2025\n",
-    "                              )\n",
+    "dataset = AnimalTrajectoryDataset(\n",
+    "    init_multi_species_boids,\n",
+    "    update_boids,\n",
+    "    species_configs,\n",
+    "    width=640,\n",
+    "    height=480,\n",
+    "    steps=10,\n",
+    "    num_samples=50,\n",
+    "    seed=2025,\n",
+    ")\n",
     "\n",
-    "torch.save(dataset, expand_path('simulated_data/boid_single_species_short.pt', get_project_root()))\n",
-    "torch.save(species_configs, expand_path('simulated_data/boid_single_species_short_config.pt', get_project_root()))"
+    "torch.save(\n",
+    "    dataset,\n",
+    "    expand_path(\"simulated_data/boid_single_species_short.pt\", get_project_root()),\n",
+    ")\n",
+    "torch.save(\n",
+    "    species_configs,\n",
+    "    expand_path(\n",
+    "        \"simulated_data/boid_single_species_short_config.pt\", get_project_root()\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -150,16 +185,32 @@
    "source": [
     "velocity_scale = 30\n",
     "\n",
-    "dataset = AnimalTrajectoryDataset(init_multi_species_boids, update_boids,\n",
-    "                              species_configs,\n",
-    "                              width=640, height=480,\n",
-    "                              steps=steps, num_samples=50,\n",
-    "                              velocity_scale = velocity_scale,\n",
-    "                              seed = 2026\n",
-    "                              ) # 50 videos of 1000 frames (5 steps advanced forward) each\n",
+    "dataset = AnimalTrajectoryDataset(\n",
+    "    init_multi_species_boids,\n",
+    "    update_boids,\n",
+    "    species_configs,\n",
+    "    width=640,\n",
+    "    height=480,\n",
+    "    steps=steps,\n",
+    "    num_samples=50,\n",
+    "    velocity_scale=velocity_scale,\n",
+    "    seed=2026,\n",
+    ")  # 50 videos of 1000 frames (5 steps advanced forward) each\n",
     "\n",
-    "torch.save(dataset, expand_path('simulated_data/boid_single_species_high_cluster_high_speed.pt', get_project_root()))\n",
-    "torch.save(species_configs, expand_path('simulated_data/boid_single_species_high_cluster_high_speed_config.pt', get_project_root()))"
+    "torch.save(\n",
+    "    dataset,\n",
+    "    expand_path(\n",
+    "        \"simulated_data/boid_single_species_high_cluster_high_speed.pt\",\n",
+    "        get_project_root(),\n",
+    "    ),\n",
+    ")\n",
+    "torch.save(\n",
+    "    species_configs,\n",
+    "    expand_path(\n",
+    "        \"simulated_data/boid_single_species_high_cluster_high_speed_config.pt\",\n",
+    "        get_project_root(),\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -180,14 +231,26 @@
     "species_configs[\"A\"][\"matching_factor\"] = 0.1\n",
     "\n",
     "\n",
-    "dataset = AnimalTrajectoryDataset(init_multi_species_boids, update_boids,\n",
-    "                              species_configs,\n",
-    "                              width=640, height=480,\n",
-    "                              steps=steps, num_samples=50,\n",
-    "                              seed = 2025\n",
-    "                              )\n",
-    "torch.save(dataset, expand_path('simulated_data/boid_single_species_noisy.pt', get_project_root()))\n",
-    "torch.save(species_configs, expand_path('simulated_data/boid_single_species_noisy_config.pt', get_project_root()))\n"
+    "dataset = AnimalTrajectoryDataset(\n",
+    "    init_multi_species_boids,\n",
+    "    update_boids,\n",
+    "    species_configs,\n",
+    "    width=640,\n",
+    "    height=480,\n",
+    "    steps=steps,\n",
+    "    num_samples=50,\n",
+    "    seed=2025,\n",
+    ")\n",
+    "torch.save(\n",
+    "    dataset,\n",
+    "    expand_path(\"simulated_data/boid_single_species_noisy.pt\", get_project_root()),\n",
+    ")\n",
+    "torch.save(\n",
+    "    species_configs,\n",
+    "    expand_path(\n",
+    "        \"simulated_data/boid_single_species_noisy_config.pt\", get_project_root()\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -205,10 +268,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = torch.load(expand_path('simulated_data/boid_single_species_basic.pt', get_project_root()),\n",
-    "                     weights_only = False)\n",
-    "species_configs = torch.load(expand_path('simulated_data/boid_single_species_basic_config.pt', get_project_root()),\n",
-    "                     weights_only = False)"
+    "dataset = torch.load(\n",
+    "    expand_path(\"simulated_data/boid_single_species_basic.pt\", get_project_root()),\n",
+    "    weights_only=False,\n",
+    ")\n",
+    "species_configs = torch.load(\n",
+    "    expand_path(\n",
+    "        \"simulated_data/boid_single_species_basic_config.pt\", get_project_root()\n",
+    "    ),\n",
+    "    weights_only=False,\n",
+    ")"
    ]
   },
   {
@@ -241,14 +310,14 @@
    ],
    "source": [
     "batch_size = 1\n",
-    "loader = DataLoader(dataset, batch_size = batch_size, shuffle=False)\n",
+    "loader = DataLoader(dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "batch = next(iter(loader))\n",
     "p, species = batch\n",
     "\n",
-    "print(\"made\", str(len(list(loader))), \"batches, each of size\",  str(batch_size))# \n",
-    "print(\"Positions:\", p.shape)      # [B, steps, N, 2]\n",
-    "print(\"Species labels:\", species.shape)   # [B, N]\n",
+    "print(\"made\", str(len(list(loader))), \"batches, each of size\", str(batch_size))  #\n",
+    "print(\"Positions:\", p.shape)  # [B, steps, N, 2]\n",
+    "print(\"Species labels:\", species.shape)  # [B, N]\n",
     "print(\"\\n\")"
    ]
   },
@@ -301,8 +370,8 @@
     "p, species = batch\n",
     "\n",
     "_, F, _2, dim = p.shape\n",
-    "starting_frame = int(round(3*F/4))\n",
-    "ani = visualize_graph(batch, 0, file_id = 0)"
+    "starting_frame = int(round(3 * F / 4))\n",
+    "ani = visualize_graph(batch, 0, file_id=0)"
    ]
   }
  ],
