moving cell magic to separate cell for linting

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -14,17 +14,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "aea59180",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "00d07572",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "import os\n",
     "from pathlib import Path\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "# Import Utility Functions\n",
@@ -42,7 +49,10 @@
     "from collab_env.tracking.thermal_processing import (\n",
     "    process_directory,\n",
     "    validate_session_structure,\n",
-    ")"
+    ")\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -459,7 +469,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "collab-environment",
+   "display_name": "collab-env",
    "language": "python",
    "name": "python3"
   },
