reorganizing for linting

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -32,6 +32,8 @@
    "source": [
     "import os\n",
     "from pathlib import Path\n",
+    "\n",
+    "# Import Environment Variables\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "# Import Utility Functions\n",
@@ -49,10 +51,7 @@
     "from collab_env.tracking.thermal_processing import (\n",
     "    process_directory,\n",
     "    validate_session_structure,\n",
-    ")\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    ")"
    ]
   },
   {
