updates to local inference

--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "# Import Custom Scripts\n",
     "from collab_env.tracking.alignment_gui import align_videos\n",
-    "from collab_env.tracking.model.local_model_inference import process_video_with_rfdetr\n",
+    "from collab_env.tracking.model.local_model_inference import infer_with_yolo\n",
     "from collab_env.tracking.model.local_model_tracking import (\n",
     "    overlay_tracks_on_video,\n",
     "    run_tracking,\n",
@@ -380,15 +380,7 @@
     "            / f\"thermal_{camera}\"\n",
     "            / \"annotated_warped_thermal.mp4\"\n",
     "        )\n",
-    "        checkpoint_path = \"scripts/model/weights.pt\"\n",
-    "\n",
-    "        process_video_with_rfdetr(\n",
-    "            video_path=thermal_video_path,\n",
-    "            output_csv_path=output_csv_path,\n",
-    "            output_video_path=output_video_path,\n",
-    "            checkpoint_path=checkpoint_path,\n",
-    "            confidence=0.5,\n",
-    "        )\n",
+    "        infer_with_yolo(thermal_video_path)\n",
     "    except Exception as e:\n",
     "        print(f\"Error during object detection for camera {camera}: {e}\")\n",
     "        continue\n",
